--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- PROFILE IMAGE -->
 
 
-                <img src="./100px X100px JPEG File.jpg">
+                <img src="./PCAP LOGO - 1.jpg">
     
             </div>
             <br/>
