--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <!-- LOCATION -->
 
-        <a href="https://https://maps.app.goo.gl/JQ3FcJtv4Ndg1pBY6">
+        <a href="https://maps.app.goo.gl/eqk2wuBhri5zvB5G8">
             <img src="./location.jpg" alt=""></a>
         <p>Location</p>
     </div>
