--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <!-- LOCATION -->
 
-        <a href="https://maps.app.goo.gl/eqk2wuBhri5zvB5G8">
+        <a href="https://maps.app.goo.gl/GV5Tz8aYCZA6FTMP6">
             <img src="./location.jpg" alt=""></a>
         <p>Location</p>
     </div>
