--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <!-- SAVE CONTACT -->
 
-        <a href="https://vcard.link/card/Da5u.vcf">  <img src="./save contact with line.jpg" alt=""></a>
+        <a href="https://vcard.link/card/Da5u.vcf">  <img src="./save contact.jpg" alt=""></a>
         <p>SAVE<br/>CONTACT</p>
     </div>
 
