--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 
 
-        <a href="#">  <img src="./04.jpg" alt=""></a>
+        <a href="https://www.linkedin.com/in/dhruv-pathak-9804462a9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">  <img src="./04.jpg" alt=""></a>
        
     </div>
 
@@ -150,7 +150,7 @@
 
         <!-- INSTAGRAM URL -->
 
-        <a href="#/">   <img src="./05.jpg" alt="">      </a>
+        <a href="https://www.instagram.com/dhruv_5168/">   <img src="./05.jpg" alt="">      </a>
   
     </div>
     <div class="cal1 wa">
@@ -168,14 +168,14 @@
 
         <!-- TWITTER -->
 
-        <a href="./#">   <img src="./03.jpg" alt="">      </a>
+        <a href="./https://x.com/CardsParam95838?t=fVe9xm9Szu-U_1K5FY_cCw&s=09">   <img src="./03.jpg" alt="">      </a>
   
     </div>
     <div class="cal1">
 
         <!-- FACEBOOK -->
 
-        <a href="#">   <img src="./02.jpg" alt="">      </a>
+        <a href="https://www.facebook.com/profile.php?id=61555454310689">   <img src="./02.jpg" alt="">      </a>
   
     </div>
 
