--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         <!-- TWITTER -->
 
-        <a href="./https://x.com/CardsParam95838?t=fVe9xm9Szu-U_1K5FY_cCw&s=09">   <img src="./03.jpg" alt="">      </a>
+        <a href="https://x.com/CardsParam95838?t=fVe9xm9Szu-U_1K5FY_cCw&s=09">   <img src="./03.jpg" alt="">      </a>
   
     </div>
     <div class="cal1">
