--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <!-- WEBSITE-->
 
-        <a href="https://www.paramcards.com/">   <img src="./WEBSITE ICON (1).jpg" alt="">      </a>
+        <a href="https://www.paramcards.com/">   <img src="./website 1.jpg" alt="">      </a>
         <p>Website</p>
     </div>
 
