--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="main">
             <div class="banner">
                 <!-- LOGO -->
-<img src="./PCAP LOGO - 2.jpg">
+<img src="./cover page.jpg">
             </div>
 
 
@@ -86,7 +86,7 @@
 
         <!-- WEBSITE-->
 
-        <a href="https://www.paramcards.com/">   <img src="./WEBSITE ICON (1).jpg" alt="">      
+        <a href="https://www.paramcards.com/">   <img src="./website 1.jpg" alt="">      
         </a>
         <p>Website</p>
     </div>
